Correciones a nivel front

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <app-header></app-header>
 <app-section></app-section>
 <app-footer></app-footer> -->
-<app-backup-db></app-backup-db>
+<!-- <app-backup-db></app-backup-db> -->
+<app-create-user></app-create-user>
