--- a/src/assets/css/design.css
+++ b/src/assets/css/design.css
@@ -1,7 +1,6 @@
-body {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
+/* body {
+  margin: 1rem 6.6rem;
+} */
 
 .backgreen {
   background: rgb(44, 82, 52);
