Formulario de busqueda componente padre

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,8 @@
 <app-section></app-section>
 <app-footer></app-footer> -->
 <!-- <app-backup-db></app-backup-db> -->
-<app-create-user></app-create-user>
+<!-- <app-create-user></app-create-user> -->
+<!-- <app-estudiante></app-estudiante> -->
+<!-- <app-profesor></app-profesor> -->
+<!-- <app-padres></app-padres> -->
+<app-busqueda-tipo-user></app-busqueda-tipo-user>
