--- a/src/app/commons/forms/create-user/padres/padres.component.html
+++ b/src/app/commons/forms/create-user/padres/padres.component.html
@@ -1,1 +1,17 @@
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-lg-5">
+      <h1 class="mb-4 text-center">{{getTitle()}}</h1>
+      <form>
 <app-create-user></app-create-user>
+<div class="col-12 mt-2">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <button type="submit" class="btn btn-dark w-100 fw-bold">Enviar</button>
+    </div>
+  </div>
+</div>
+</form>
+</div>
+</div>
+</div>
