--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
 <!-- <app-backup-db></app-backup-db> -->
 <!-- <app-create-user></app-create-user> -->
 <!-- <app-estudiante></app-estudiante> -->
-<!-- <app-profesor></app-profesor> -->
+<app-profesor></app-profesor>
 <!-- <app-padres></app-padres> -->
-<app-busqueda-tipo-user></app-busqueda-tipo-user>
+<!-- <app-busqueda-tipo-user></app-busqueda-tipo-user> -->
