--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<!-- <app-header></app-header>
-<app-section></app-section>
-<app-footer></app-footer> -->
+<router-outlet></router-outlet>
+<!-- <app-header-control></app-header-control> -->
 <!-- <app-backup-db></app-backup-db> -->
 <!-- <app-create-user></app-create-user> -->
 <!-- <app-estudiante></app-estudiante> -->
-<app-profesor></app-profesor>
-<!-- <app-padres></app-padres> -->
+<!-- <app-profesor></app-profesor>
+<app-padres></app-padres> -->
 <!-- <app-busqueda-tipo-user></app-busqueda-tipo-user> -->
