--- a/src/app/commons/header/header.component.html
+++ b/src/app/commons/header/header.component.html
@@ -1,9 +1,8 @@
-
 <header>
   <div class="container-xx"><img src="assets/img/banner.png" style="height: 100%; width: 100%;"></div>
   <nav class="navbar navbar-expand-lg navbar-light backblueone">
     <div class="container-fluid">
-      <a class="nav-link text-white text-navar" href="#">Inicio</a>
+      <a class="nav-link text-white text-navar">Inicio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -12,23 +11,28 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
               ¿Quiénes somos?
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Misión</a></li>
-              <li><a class="dropdown-item" href="#">Visión</a></li>
+              <li><a class="dropdown-item">Misión</a></li>
+              <li><a class="dropdown-item">Visión</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tramites y servicios</a>
+            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Departamentos</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Ejemplo</a></li>
+              <li><a class="dropdown-item">Educación continúa</a></li>
+              <li><a class="dropdown-item">Biblioteca</a></li>
             </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tramites y servicios</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" [routerLink]="['/login']" [state]="{id:1}">Control escolar</a></li>
+              <li><a class="dropdown-item">Intranet</a></li>
+            </ul>
           </li>
         </ul>
         <form class="d-flex">
